# yolo-object-detection-cli

./: .dockerignore  .gitignore  Dockerfile  LICENSE  README.md  main.py  pyproject.toml  requirements.docker.txt  requirements.txt
.devcontainer/: devcontainer.json
.github/workflows/: docker-publish.yaml
