[project]
name = "yolo-object-detection-cli"
version = "0.0.0"
description = ""
authors = [
    {name = "Zadkiel AHARONIAN", email = "hello@zadkiel.fr"},
]
readme = "README.md"
license = {text = "MIT"}
package-mode = false
requires-python = ">=3.8"
dependencies = [
    "uvicorn[standard]==0.32.1",
    "fastapi==0.103.2",         # Downgrade to support typing-extensions requirements
    "typing-extensions==4.5.0", # Downgrade to support fastapi and ultralytics requirements
    "opencv-python==4.8.1.78",  # Downgrade to match numpy requirements
    "numpy==1.23.5",
    "ultralytics==8.3.49",
    "lapx==0.5.11",
    "paho-mqtt==2.1.0",
    "scikit-image==0.21.0",
    "pytubefix>=6.5.2",
    "onnxslim==0.1.43",
]
